<resources>
    <string name="app_name">PohonKoin</string>

    <!-- Strings related to EmailLoginActivity -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="TXT_CREATE_ACCOUNT">Create Account</string>
    <string name="TXT_FORGOT_PASSWORD">Forgot Password</string>
    <string name="pohonkoin_copyright">POHONKOIN ©</string>
    <string name="action_save">Save</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="koin_putih_label">Koin Putih</string>
    <string name="koin_hijau_label">Koin Hijau</string>
    <string name="koin_merah_label">Koin Merah</string>
    <string name="merchant_login_button">Merchant Login</string>
    <string name="bulletin_label_button">Bulletin</string>
    <string name="settings_label_button">Settings</string>
    <string name="koin_history_label">Koin History</string>
    <string name="merchant_koin_label">Merchant Koin</string>
    <string name="send_koin_label">Send Koin</string>
    <string name="receive_koin_label">Receive Koin</string>
    <string name="create_tree_label">Create Tree</string>
    <string name="created_tree_label">Created Tree</string>


    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="loading">Please Wait</string>
    <string name="prompt_merchant_id">Merchant ID</string>
    <string name="merchant_signup">Want to be our Merchant?</string>
    <string name="textView">Please scan the main tree QR code to start your tree</string>
    <string name="Scan">Scan Image from Gallery</string>
    <string name="filldata">Fill your data below, we will contact  your WA number soon to verify</string>
    <string name="Place">Place</string>
    <string name="idcard">Identity Card Number</string>
    <string name="Click">Click sign up below means Agree with our rule</string>
    <string name="signUp">Sign Up</string>
    <string name="your_name">Insert your name</string>
    <string name="your_place">Insert your place</string>
    <string name="your_idnumber">Insert your ID</string>
    <string name="age">Age</string>
    <string name="WANumber">WA Number</string>
    <string name="your_age">Insert your age</string>
    <string name="your_wa">Insert your WA Number</string>
    <string name="hint_password">Password</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="hint_email">Email</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="new_pass">New Password</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove User</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="not_available">Not Available</string>
    <string name="please_enter_koin_amount_first">Please enter Koin amount first</string>
    <string name="username">Username</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="create_account">Create Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_koin_page">Koin Page</string>
    <string name="title_activity_bulletin">Bulletin</string>
    <string name="title_activity_account_profile">Account Profile</string>
    <string name="title_activity_merchant_signup">Merchant Sign Up</string>
    <string name="title_activity_koin_history">Koin History</string>
    <string name="title_activity_created_tree">Created Tree</string>
    <string name="title_activity_create_tree">Create Tree</string>
    <string name="title_activity_send_koin">Send Koin</string>
    <string name="title_activity_receive_koin">Receive Koin</string>
    <string name="title_activity_settings">Settings</string>
</resources>
