<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer"
        android:layout_alignParentTop="true"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/TextContent.LabelKoin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:text="@string/create_tree_label" />

            <TextView
                style="@style/TextContent.LabelKoin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:text="@string/created_tree_label" />

        </LinearLayout>


        <TextView
            android:id="@+id/merchant_koin"
            style="@style/TextContent.LabelKoin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/textview_border"
            android:text="@string/merchant_koin_label" />

        <TextView
            android:id="@+id/koin_history"
            style="@style/TextContent.LabelKoin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:text="@string/koin_history_label" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>